@@ -5,6 +5,8 @@ Version 1.9.0-svn:
        scenario.
  * Language and i18n:
    * Updated translations:
+ * WML Engine:
+   * Deprecated [set_variable]'s random key, use rand instead.
  * Miscellaneous and bug fixes:
    * Defaulted log level to warning again
    * Removed the unused gui2 menu bar
